--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Laos Signature Test</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body
+    class="m-0 flex min-h-screen min-w-[320px] place-items-center dark:bg-gray-900 dark:text-gray-100"
+  >
+    <div id="root" class="mx-auto max-w-screen-xl p-8"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
